# sim_indirect_opinion_sync

./: CMakeLists.txt  LICENSE  Norm.hpp  Norm3rd.hpp  NormTernary.hpp  PrivRepGame.hpp  PrivRepGame3rd.hpp  PrivRepGameTernary.hpp  README.md  SolitaryObsGame.hpp  inspect_HscoreDynamics.cpp  inspect_Norm.cpp  inspect_PrivRepGame.cpp  inspect_PrivRepGame3rd.cpp  inspect_PrivRepGameTernary.cpp  inspect_SolitaryObsGame.cpp  main_CorrelatedOpinions.cpp  main_PayoffComparison.cpp  test_Norm.cpp  test_PrivRepGame.cpp  test_SolitaryObsGame.cpp
script/: .gitignore  L3_random_polymorphic_solitary.py  Pipfile  plot_correlated_bcrange.py  plot_simultaneous_bc_range.py  plot_solitary.py  plot_solitary_3rd.py  plot_solitary_ternary.py
